# FrameConverter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  runDev.command  tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/src/: converter.rs  lib.rs
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx
