[package]
name = "app"
version = "0.1.0"
description = "Sequence Frame Converter"
authors = ["ks10"]
license = "MIT"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
thiserror = "2.0.17"
walkdir = "2.5.0"
image = "0.25"
gif = "0.13"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
png = "0.18"
apng = "0.1"
libwebp-sys = "0.9"
oxipng = "9.1"
once_cell = "1.19"
rayon = "1.10"
libc = "0.2"

